--- a/starter_website/templates/warehouse_locations.html
+++ b/starter_website/templates/warehouse_locations.html
@@ -1,6 +1,6 @@
-<!-- Invoices Table -->
-<H1>Invoices</H1>
-<h4>Displays customer invoices</h4>
+<!-- Warehouse Locations Table -->
+<H1>Warehouse Locations</H1>
+<h4>Choose one of your favorite locations</h4>
 
 <!-- Headers and references to those pages -->
 <ul>
@@ -16,81 +16,60 @@
 
 <!-- Table to display invoice information -->
 <div>
-    <legend><H2>Customer Invoices</H2></legend>
+    <legend><H2>Warehouse Locations</H2></legend>
     <table class="table">
         <thead>
-            <th hidden>customer_id</th>
-            <th>invoice_id</th>
-            <th>employee_id</th>
-            <th>payment_date_year</th>
-            <th>payment_date_month</th>
-            <th>payment_date_dayOfMonth</th>
-            <th>payment_amount</th>
-            <th>payment_method</th>
-            <th>invoice_amount</th>
-            <th>modify invoice</th>
-            <th>delete invoice</th>
+            <th>location_id</th>
+            <th>location_street_address</th>
+            <th>location_city</th>
+            <th>location_state</th>
+            <th>location_zip</th>
+            <th>modify address</th>
+            <th>delete address</th>
         </thead>
 
         <tbody>
             {% for r in rows %}
             <tr>
-              <td hidden> {{ r.0 }}</td>
+              <td> {{ r.0 }}</td>
               <td> {{ r[1] }}</td>
               <td> {{ r[2] }}</td>
               <td> {{ r[3] }}</td>
               <td> {{ r[4] }}</td>
-              <td> {{ r[5] }}</td>
-              <td> {{ r[6] }}</td>
-              <td> {{ r[7] }}</td>
-              <td> {{ r[8] }}</td>
               <td> <input type='button' name='Update' value='Update' onclick="window.location = '/update_people/{{r[4]}}'"> </td>
               <td> <input type='button' name='Delete' value='Delete' onclick="window.location = '/delete_people/{{r[4]}}'"> </td>
             </tr>
             {% endfor %}
           </tbody>
-
 </table>
 
 <br></br>
 
 <!-- Form to submit invoice information -->
-<form action="/Invoices" method="POST">
+<form action="/warehouse_locations" method="POST">
     <fieldset>
         <legend>New Invoice Information:</legend>
-        <label>Invoice ID:
-            <input type="number" name="invoice_id" size="30" maxlength="100">
+        <label>Location ID:
+            <input type="number" name="location_ID" size="30" maxlength="100">
         </label>
         <br>
-        <label>Employee ID:
-            <input type="number" name="employee_id" size="30" maxlength="100">
+        <label>Location Street Address:
+            <input type="text" name="location_street_address" size="30" maxlength="100">
         </label>
         <br>
-        <label>Payment Date Year:
-            <input type="number" name="payment_date_year" size="30" maxlength="100">
+        <label>Location City:
+            <input type="text" name="location_city" size="30" maxlength="100">
         </label>
         <br>
-        <label>Payment Date Month:
-            <input type="number" name="payment_date_month" size="30" maxlength="100">
+        <label>Location State:
+            <input type="text" name="location_state" size="30" maxlength="100">
         </label>
         <br>
-        <label>Payment Date Day:
-            <input type="number" name="payment_date_dayOfMonth" size="30" maxlength="100">
+        <label>Location Zip:
+            <input type="number" name="location_zip" size="30" maxlength="100">
         </label>
         <br>
-        <label>Payment Amount:
-            <input type="number" name="payment_amount" size="30" maxlength="100">
-        </label>
-        <br>
-        <label>Payment Method:
-            <input type="text" name="payment_method" size="30" maxlength="100">
-        </label>
-        <br>
-        <label>Invoice Amount:
-            <input type="number" name="invoice_amount" size="30" maxlength="100">
-        </label>
-        <br>
-        <input type="submit" value="Submit Invoice">
+        <input type="submit" value="Submit Location">
     </form>
 
 
