--- a/starter_website/templates/Invoices.html
+++ b/starter_website/templates/Invoices.html
@@ -4,15 +4,15 @@
 
 <!-- Headers and references to those pages -->
 <ul>
-    <li><a href="index.html">Home</a></li>
-    <li><a href="customers.html">Customers</a></li>
-	<li><a href="Invoices">Invoices</a></li>
-    <li><a href="orders.html">Orders</a></li>
-	<li><a href="product_inventory">Product Inventory</a></li>
-    <li><a href="warehouse_inventory.html">Warehouse Inventory</a></li>
+    <li><a href="index">Home</a></li>
+    <li><a href="customers">Customers</a></li>
+    <li><a href="Invoices">Invoices</a></li>
+    <li><a href="orders">Orders</a></li>
+    <li><a href="product_inventory">Product Inventory</a></li>
+    <li><a href="wh_inv">Warehouse Inventory</a></li>
     <li><a href="warehouse_locations">Warehouse Locations</a></li>
-	<li><a href="employees.html">Employees</a></li>
-</ul>	
+    <li><a href="employees">Employees</a></li>
+</ul> 	
 
 <!-- Table to display invoice information -->
 <div>
