Removed update/delete buttons

--- a/starter_website/templates/Invoices.html
+++ b/starter_website/templates/Invoices.html
@@ -44,8 +44,9 @@
               <td> {{ r[6] }}</td>
               <td> {{ r[7] }}</td>
               <td> {{ r[8] }}</td>
-              <td> <input type='button' name='Update' value='Update' onclick="window.location = '/update_people/{{r[4]}}'"> </td>
-              <td> <input type='button' name='Delete' value='Delete' onclick="window.location = '/delete_people/{{r[4]}}'"> </td>
+              <!-- Removal of uneccesarry buttons 
+	      <td> <input type='button' name='Update' value='Update' onclick="window.location = '/update_people/{{r[4]}}'"> </td>
+              <td> <input type='button' name='Delete' value='Delete' onclick="window.location = '/delete_people/{{r[4]}}'"> </td> -->
             </tr>
             {% endfor %}
           </tbody>
