--- a/starter_website/templates/Invoices.html
+++ b/starter_website/templates/Invoices.html
@@ -28,8 +28,9 @@
             <th>payment_amount</th>
             <th>payment_method</th>
             <th>invoice_amount</th>
+            <!-- Removal of unnecessary buttons 
             <th>modify invoice</th>
-            <th>delete invoice</th>
+            <th>delete invoice</th> -->
         </thead>
 
         <tbody>
@@ -44,7 +45,7 @@
               <td> {{ r[6] }}</td>
               <td> {{ r[7] }}</td>
               <td> {{ r[8] }}</td>
-              <!-- Removal of uneccesarry buttons 
+              <!-- Removal of unnecessary buttons 
 	      <td> <input type='button' name='Update' value='Update' onclick="window.location = '/update_people/{{r[4]}}'"> </td>
               <td> <input type='button' name='Delete' value='Delete' onclick="window.location = '/delete_people/{{r[4]}}'"> </td> -->
             </tr>
