Update table and header formatting (centered)

--- a/starter_website/templates/customers.html
+++ b/starter_website/templates/customers.html
@@ -82,6 +82,10 @@ body{
     background-color: #F5F5F5;
 }
 
+h1, h4, h2{
+    text-align: center;
+}
+	
 table, td, tr, th {
 	border: solid;
     border-width: 2px;
@@ -120,6 +124,12 @@ li a {
 li a:hover {
   background-color: #4682B4;
   color: white;
+}
+
+.table{
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 </style>
