--- a/starter_website/templates/warehouse_inventory.html
+++ b/starter_website/templates/warehouse_inventory.html
@@ -86,6 +86,10 @@ body{
     background-color: #F5F5F5;
 }
 
+h1, h4, h2{
+    text-align: center;
+}
+	
 table, td, tr, th {
 	border: solid;
     border-width: 2px;
@@ -125,5 +129,11 @@ li a:hover {
   background-color: #4682B4;
   color: white;
 }
+
+.table{
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+}	
 
 </style>
