--- a/starter_website/templates/customer_update.html
+++ b/starter_website/templates/customer_update.html
@@ -38,6 +38,10 @@ body{
     background-color: #F5F5F5;
 }
 
+h1, h4, h2{
+    text-align: center;
+}
+    
 table, td, tr, th {
     border: solid;
     border-width: 2px;
@@ -78,4 +82,10 @@ li a:hover {
   color: white;
 }
 
+.table{
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+    
 </style>
